--- a/css/editor/callouts/callout-poem.css
+++ b/css/editor/callouts/callout-poem.css
@@ -152,5 +152,6 @@ body {
 
 .callout[data-callout=poem] {
   --callout-padding: 0;
+  --callout-title-padding: var(--size-4-3);
   position: relative;
 }
