--- a/scss/editor/callouts/_callout-caption.scss
+++ b/scss/editor/callouts/_callout-caption.scss
@@ -17,7 +17,7 @@
         font-style: italic;
         border-bottom: 1px dashed rgb(var(--callout-color));
         background-color: color-mix(in srgb, var(--workleaves-background), rgb(var(--callout-color)) 20%);
-        inset-block-start: calc(-1 * var(--image-shadow-offset));
+        inset-block-start: calc(-1 * var(--image-shadow-offset, 0px));
         padding-inline-start: 0.4em;
         padding-inline-end: 1.5em;
         padding-block: 0.2em;
