--- a/scss/editor/callouts/_callout-grid.scss
+++ b/scss/editor/callouts/_callout-grid.scss
@@ -17,6 +17,7 @@ $stop5: 850px;
     > .callout-content {
         border: none;
         display: grid;
+        align-items: flex-start;
         gap: 10px;
         padding: 0;
     }
