--- a/scss/editor/callouts/_callout-pinned.scss
+++ b/scss/editor/callouts/_callout-pinned.scss
@@ -21,7 +21,7 @@
     --pinned-large-width: 100%;
 
     position: relative;
-    margin: 0 auto;
+    margin-inline: auto;
     background-color: white;
     color: black;
 
