--- a/scss/editor/callouts/_callout-screen.scss
+++ b/scss/editor/callouts/_callout-screen.scss
@@ -2,10 +2,17 @@ body {
     --callout-screen-font: 'ProFont', 'Chakra Petch', 'Courier New', Courier, monospace;
 }
 
+.theme-dark .callout[data-callout="screen"] {
+    --callout-color: 68, 207, 110;
+}
+.theme-light .callout[data-callout="screen"] {
+    --callout-color: 33, 162, 58;
+}
+
 .callout[data-callout="screen"] {
-    --callout-color: var(--color-green-rgb);
     --callout-icon: lucide-monitor;
     --callout-title-size: 1.3em;
+    --callout-border-width: 1px;
 
     --list-marker-color: rgb(var(--callout-color));
     --list-marker-color-collapsed: color-mix(in srgb, rgb(var(--callout-color)), rgb(var(--mono-rgb-0)) 40%);
@@ -33,7 +40,7 @@ body {
     }
 
     &:not(.is-collapsed) {
-        filter: drop-shadow(0 0 3px rgba(var(--callout-color), 0.5));
+        text-shadow: 0 0 3px rgba(var(--callout-color), 0.5);
     }
 
     .image-embed {
