--- a/css/editor/callouts/callout-masonry.css
+++ b/css/editor/callouts/callout-masonry.css
@@ -12,6 +12,7 @@ body {
   --callout-padding: 0;
   --callout-content-padding: 0;
   --callout-border-width: 0;
+  --callout-blend-mode: normal;
   --image-shadow-offset: 0;
   --link-decoration: none;
   --link-unresolved-opacity: 1;
@@ -30,12 +31,6 @@ body {
 }
 .callout[data-callout=masonry] a {
   font-size: 0;
-}
-.callout[data-callout=masonry]:hover img:not(a img) {
-  filter: saturate(10%) blur(1px);
-}
-.callout[data-callout=masonry]:hover a:not(:hover) img {
-  filter: saturate(70%);
 }
 
 .callout[data-callout=masonry][data-callout-metadata~=col-2] {
