--- a/scss/css/editor/callouts/callout-caption.scss
+++ b/scss/css/editor/callouts/callout-caption.scss
@@ -4,3 +4,7 @@ Author: ElsaTam (Kapirklaa in Discord)
 */
 
 @use '../../../editor/callouts/callout-caption';
+
+.callout[data-callout=caption] p {
+    font-size: 0;
+}
