--- a/scss/css/editor/callouts/callout-cards-deck.scss
+++ b/scss/css/editor/callouts/callout-cards-deck.scss
@@ -4,3 +4,15 @@ Author: ElsaTam (Kapirklaa in Discord)
 */
 
 @use '../../../editor/callouts/callout-cards-deck';
+
+
+/* Fixes for themes */
+
+/* Minimal *//*
+.callout[data-callout=cards-deck] {
+    --image-muted: 1;
+}
+.markdown-preview-view.is-readable-line-width .markdown-preview-sizer .callout[data-callout=cards-deck] img,
+.markdown-source-view.mod-cm6.is-readable-line-width .cm-contentContainer.cm-contentContainer > .cm-content .callout[data-callout=cards-deck] img {
+    max-width: unset;
+}/**/
