--- a/scss/css/editor/callouts/callout-full-width-image.scss
+++ b/scss/css/editor/callouts/callout-full-width-image.scss
@@ -4,3 +4,7 @@ Author: ElsaTam (Kapirklaa in Discord)
 */
 
 @use '../../../editor/callouts/callout-full-width-image';
+
+.callout:is([data-callout=full-width-image], [data-callout=full-w-img], [data-callout=fwi], [data-callout="full-width-panoramic-image-:jack_o_lantern:"], [data-callout=fwpi-jol])[data-callout-metadata~=no-title] .callout-title {
+    display: none;
+}
