--- a/scss/css/editor/callouts/callout-poem.scss
+++ b/scss/css/editor/callouts/callout-poem.scss
@@ -7,5 +7,6 @@ Author: ElsaTam (Kapirklaa in Discord)
 
 .callout[data-callout=poem] {
     --callout-padding: 0;
+    --callout-title-padding: var(--size-4-3);
     position: relative;
 }
