--- a/scss/css/editor/callouts/callout-table-cards.scss
+++ b/scss/css/editor/callouts/callout-table-cards.scss
@@ -4,3 +4,9 @@ Author: ElsaTam (Kapirklaa in Discord)
 */
 
 @use '../../../editor/callouts/callout-table-cards';
+
+/* Minimal *//*
+.callout[data-callout=table-cards] {
+    --table-width: 100%;
+}
+/**/
