--- a/snippets/editor/callouts/callout-grid.css
+++ b/snippets/editor/callouts/callout-grid.css
@@ -18,6 +18,7 @@ Author: ElsaTam (Kapirklaa in Discord)
 .callout[data-callout=grid] > .callout-content {
   border: none;
   display: grid;
+  align-items: flex-start;
   gap: 10px;
   padding: 0;
 }
