--- a/snippets/editor/callouts/callout-profile.css
+++ b/snippets/editor/callouts/callout-profile.css
@@ -33,3 +33,13 @@ body {
   border: var(--callout-border-width) solid rgba(var(--callout-color), 0.5);
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5), 0px 0px 5px rgba(0, 0, 0, 0.5);
 }
+
+.theme-light .callout[data-callout=profile] {
+  --color-gray: #4d4d4d;
+  --color-gray-rgb: 77, 77, 77;
+}
+
+.theme-dark .callout[data-callout=profile] {
+  --color-gray: #bdbdbd;
+  --color-gray-rgb: 189, 189, 189;
+}
