--- a/snippets/plugins/community/dataview/dataview-cards-deck.css
+++ b/snippets/plugins/community/dataview/dataview-cards-deck.css
@@ -160,3 +160,10 @@ body {
     z-index: 1;
   }
 }
+/* Fixes for themes */
+/* Minimal */ /*
+@scope (.dataview-cards-deck) to (.markdown-embed .markdown-embed) {
+    ul.dataview-result-list-root-ul .markdown-embed {
+        padding: 0;
+    }
+}/**/
