--- a/publish.css
+++ b/publish.css
@@ -814,7 +814,7 @@ body {
   padding-inline-start: calc(var(--cite-decoration-width) + 5px);
   background: none;
   border: none;
-  border-inline-start: var(--blockquote-border-thickness) solid var(--blockquote-border-color);
+  border-inline-start: var(--blockquote-border-thickness) solid rgb(var(--callout-color));
 }
 .callout[data-callout~=cite] .callout-title,
 .callout[data-callout~=quote] .callout-title {
@@ -833,8 +833,8 @@ body {
 .callout[data-callout~=quote] .callout-content > :plast-child {
   margin-bottom: 0;
 }
-.callout[data-callout~=cite] cite::after,
-.callout[data-callout~=quote] cite::after {
+.callout[data-callout~=cite]::after,
+.callout[data-callout~=quote]::after {
   content: "“";
   position: absolute;
   font-style: italic;
@@ -845,9 +845,9 @@ body {
   bottom: 0;
   left: 0;
   width: var(--cite-decoration-width);
-  color: var(--color-accent);
+  color: rgb(var(--callout-color));
   font-family: Arial, Helvetica, sans-serif;
-  background-color: hsla(var(--accent-h), var(--accent-s), var(--accent-l), 0.1);
+  background-color: rgba(var(--callout-color), 0.1);
 }
 .callout[data-callout~=cite] cite,
 .callout[data-callout~=quote] cite {
