--- a/scss/editor/callouts/_callouts-metadata.scss
+++ b/scss/editor/callouts/_callouts-metadata.scss
@@ -51,6 +51,8 @@
 
 .callout[data-callout-metadata~="blank"] {
     margin: 0;
+    mix-blend-mode: none;
+    border-radius: 0;
 
     &, > .callout-content {
         border: none;
