Compatibility with other banner attributes from ITS

--- a/publish.css
+++ b/publish.css
@@ -3639,12 +3639,12 @@ img[alt~=b-w] {
 }
 
 @container not (style(--image-shadow-offset: 0) or style(--image-shadow-offset: 0px)) {
-  .image-embed:not(:is([alt~=full-width-image], [alt~=full-w-img], [alt~=fwi], [alt~="full-width-panoramic-image-:jack_o_lantern:"], [alt~=fwpi-jol], [alt~=no-shadow], [alt~=banner])) {
+  .image-embed:not(:is([alt~=full-width-image], [alt~=full-w-img], [alt~=fwi], [alt~="full-width-panoramic-image-:jack_o_lantern:"], [alt~=fwpi-jol], [alt~=no-shadow], [alt~=banner], [alt~="banner+small"], [alt~="banner+tall"], [alt~=sban])) {
     z-index: 1;
     width: fit-content;
   }
-  .markdown-source-view .image-embed:not(:is([alt~=full-width-image], [alt~=full-w-img], [alt~=fwi], [alt~="full-width-panoramic-image-:jack_o_lantern:"], [alt~=fwpi-jol], [alt~=no-shadow], [alt~=banner])),
-  .markdown-rendered .image-embed:not(:is([alt~=full-width-image], [alt~=full-w-img], [alt~=fwi], [alt~="full-width-panoramic-image-:jack_o_lantern:"], [alt~=fwpi-jol], [alt~=no-shadow], [alt~=banner])) {
+  .markdown-source-view .image-embed:not(:is([alt~=full-width-image], [alt~=full-w-img], [alt~=fwi], [alt~="full-width-panoramic-image-:jack_o_lantern:"], [alt~=fwpi-jol], [alt~=no-shadow], [alt~=banner], [alt~="banner+small"], [alt~="banner+tall"], [alt~=sban])),
+  .markdown-rendered .image-embed:not(:is([alt~=full-width-image], [alt~=full-w-img], [alt~=fwi], [alt~="full-width-panoramic-image-:jack_o_lantern:"], [alt~=fwpi-jol], [alt~=no-shadow], [alt~=banner], [alt~="banner+small"], [alt~="banner+tall"], [alt~=sban])) {
     padding-right: var(--image-shadow-offset, 0px);
     padding-bottom: var(--image-shadow-offset, 0px);
     display: inline-block;
@@ -3653,8 +3653,8 @@ img[alt~=b-w] {
     position: relative;
     font-size: 0;
   }
-  .markdown-source-view .image-embed:not(:is([alt~=full-width-image], [alt~=full-w-img], [alt~=fwi], [alt~="full-width-panoramic-image-:jack_o_lantern:"], [alt~=fwpi-jol], [alt~=no-shadow], [alt~=banner]))::before,
-  .markdown-rendered .image-embed:not(:is([alt~=full-width-image], [alt~=full-w-img], [alt~=fwi], [alt~="full-width-panoramic-image-:jack_o_lantern:"], [alt~=fwpi-jol], [alt~=no-shadow], [alt~=banner]))::before {
+  .markdown-source-view .image-embed:not(:is([alt~=full-width-image], [alt~=full-w-img], [alt~=fwi], [alt~="full-width-panoramic-image-:jack_o_lantern:"], [alt~=fwpi-jol], [alt~=no-shadow], [alt~=banner], [alt~="banner+small"], [alt~="banner+tall"], [alt~=sban]))::before,
+  .markdown-rendered .image-embed:not(:is([alt~=full-width-image], [alt~=full-w-img], [alt~=fwi], [alt~="full-width-panoramic-image-:jack_o_lantern:"], [alt~=fwpi-jol], [alt~=no-shadow], [alt~=banner], [alt~="banner+small"], [alt~="banner+tall"], [alt~=sban]))::before {
     content: "";
     position: absolute;
     z-index: -1;
